kong/yaml/00-echo-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kong-lab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: kong-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: ealen/echo-server:latest
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: kong-lab
spec:
  selector:
    app: echo
  ports:
    - name: http
      port: 80
      targetPort: http
