kong/yaml/02-rate-limit.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kong-lab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: kong-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: ealen/echo-server:latest
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: kong-lab
spec:
  selector:
    app: echo
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  namespace: kong-lab
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: echo-rate-limit
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /echo
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 80
